--- a/index.html
+++ b/index.html
@@ -2,70 +2,63 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Dope Ass Calculator</title>
+	<link rel="stylesheet" href="style.css">
 
-	<style type="text/css">
-		.tg {
-			border-collapse: collapse;
-			border-spacing: 0;
+	<style>
+		table,
+		tr,
+		td,
+		th {
+			border: 2px solid;
+			border-spacing: 1px;
+			border-radius: 6px;
+			white-space: nowrap;
+			text-align: center;
+			padding: ;
 		}
 
-		.tg td {
-			font-family: Arial, sans-serif;
-			font-size: 14px;
-			padding: 10px 5px;
-			border-style: solid;
-			border-width: 1px;
-			overflow: hidden;
-			word-break: normal;
-		}
-
-		.tg th {
-			font-family: Arial, sans-serif;
-			font-size: 14px;
-			font-weight: normal;
-			padding: 10px 5px;
-			border-style: solid;
-			border-width: 1px;
-			overflow: hidden;
-			word-break: normal;
-		}
-
-		.tg .tg-yw4l {
-			vertical-align: top
+		th {
+			background-color: deepskyblue;
 		}
 	</style>
 </head>
 
 <body>
-	<table class="tg">
-		<tr>
-			<th class="tg-yw4l" colspan="4"></th>
-		</tr>
-		<tr>
-			<td class="tg-yw4l">1<br></td>
-			<td class="tg-yw4l">2</td>
-			<td class="tg-yw4l">3</td>
-			<td class="tg-yw4l">/</td>
-		</tr>
-		<tr>
-			<td class="tg-yw4l">4</td>
-			<td class="tg-yw4l">5</td>
-			<td class="tg-yw4l">6</td>
-			<td class="tg-yw4l">*<br></td>
-		</tr>
-		<tr>
-			<td class="tg-yw4l">7</td>
-			<td class="tg-yw4l">8</td>
-			<td class="tg-yw4l">9</td>
-			<td class="tg-yw4l">-</td>
-		</tr>
-		<tr>
-			<td class="tg-yw4l">AC</td>
-			<td class="tg-yw4l">0</td>
-			<td class="tg-yw4l">=</td>
-			<td class="tg-yw4l">+</td>
-		</tr>
-	</table>
+	<form name="calc">
+		<table>
+			<tr>
+				<td colspan=4><input type=text Name="display"></td>
+			</tr>
+			<tr>
+				<td><input class="digit" type=button value="1" OnClick="calc.display.value+='1'"></td>
+				<td><input class="digit" type=button value="2" OnClick="calc.display.value+='2'"></td>
+				<td><input class="digit" type=button value="3" OnClick="calc.display.value+='3'"></td>
+				<th><input class="action" type=button value="/" OnClick="calc.display.value+='/'"></th>
+			</tr>
+			<tr>
+				<td><input class="digit" type=button value="4" OnClick="calc.display.value+='4'"></td>
+				<td><input class="digit" type=button value="5" OnClick="calc.display.value+='5'"></td>
+				<td><input class="digit" type=button value="6" OnClick="calc.display.value+='6'"></td>
+				<th><input class="action" type=button value="*" OnClick="calc.display.value+='*'"></th>
+			</tr>
+			<tr>
+				<td><input class="digit" type=button value="7" OnClick="calc.display.value+='7'"></td>
+				<td><input class="digit" type=button value="8" OnClick="calc.display.value+='8'"></td>
+				<td><input class="digit" type=button value="9" OnClick="calc.display.value+='9'"></td>
+				<th><input class="action" type=button value="-" OnClick="calc.display.value+='-'"></th>
+			</tr>
+			<tr>
+				<td><input class="action" type=button value="AC" OnClick="calc.display.value=''"></td>
+				<td><input class="digit" type=button value="0" OnClick="calc.display.value+='0'"></td>
+				<td><input class="action" type=button value="=" OnClick="calc.display.value=eval(calc.display.value)"></td>
+				<th><input class="action" type=button value="+" OnClick="calc.display.value+='+'"></th>
+			</tr>
+		</table>
+	</form>
+
 </body>
 
 </html>
